
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaumne Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-05-26 DP  1.8.0  Ensure we always allow the maximum string length possible
                      to be entered in the Edit Grid.
2007-05-24 GL  1.8.0  Sort servers' list alphabetically.
2007-05-18 DP  1.8.0  Fix a crash in the Edit Grid which occured if Delete was
                      pressed whilst editing a boolean. Per report from Erwin.
2007-05-17 DP  1.8.0  Remove bundled copies of PostgreSQL/Slony docs to make it
                      easier to localise the rest. Instead allow the use of 
                      local or online copies of the PostgreSQL, EnterpriseDB or
                      Slony docs, each independently of the other.
2007-05-10 DP  1.8.0  Add a new command line option (-f <file>) to open an SQL
                      script automatically when using -q or -qc. Per request 
                      from Taras Kopets.
2007-05-10 GL  1.8.0  Add fillfactor support on tables and indexes.
2007-05-10 DP  1.8.0  Add a new command line options (-cp <file>) to allow 
                      direct editing of pgpass files.
2007-05-09 DP  1.8.0  Treat view columns as first class citizens. Show them on
                      the treeview, and allow their properties page to be
                      viewed. Allow editting of the default value and comment,
                      and reflect this in the reverse engineered SQL for the
                      view. Per request from Luiz.
2007-05-09 DP  1.8.0  Load second and subsequent postgresql.conf files
                      into the config editor correctly.
2007-05-09 DP  1.8.0  Prompt the user to save changes before opening a file