@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-05-30 DP  1.8.0  Ensure logfiles and pgpass files can be correctly saved
+                      on Windows when the username contains non-ASCII chars.
+                      Per report from Athanasios E. Samaras.
 2007-05-26 DP  1.8.0  Ensure we always allow the maximum string length possible
                       to be entered in the Edit Grid.
 2007-05-24 GL  1.8.0  Sort servers' list alphabetically.
